# modul-7

./: config.ini  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: fc7a22503b70_init.py
database/: connect.py  models.py
seed/: fill_groups.py  fill_lessons.py  fill_marks.py  fill_professors.py  fill_student.py
